CSS fixes and OAUTH moves

--- a/src/app/heremap/partials/generateMap.html
+++ b/src/app/heremap/partials/generateMap.html
@@ -1,1 +1,3 @@
-<img ng-show="thirdCtrl.addingAllYelpMarkers" ng-model="thirdCtrl.initalMap" class="mapResult" style="border: none" alt="Loading Map" ng-src="{{thirdCtrl.addingAllYelpMarkers}}" />
+<div>
+<img ng-show="thirdCtrl.addingAllYelpMarkers" ng-model="thirdCtrl.initalMap" class="mapResult" alt="Loading Map" ng-src="{{thirdCtrl.addingAllYelpMarkers}}" />
+</div>
