--- a/src/app/heremap/partials/index.html
+++ b/src/app/heremap/partials/index.html
@@ -27,7 +27,8 @@
 
 <div style="clear:both;">
 
-<div class="yelpSide" ui-view="yelpResults"></div>
-<div class="mapSide" ui-view="generateMap"></div>
-
+<div class="container-results">
+	<div class="yelpSide" ui-view="yelpResults"></div>
+	<div class="mapSide flex-column" ui-view="generateMap"></div>
+<div>
 </div>
